--- a/frontend/src/components/FreelanceProfile/FreelanceProfile.css
+++ b/frontend/src/components/FreelanceProfile/FreelanceProfile.css
@@ -32,6 +32,7 @@
 .freelanceCard h6 {
     font-family: Montserrat-VariableFont_wght;
     font-size: 1.4rem;
+    line-height: 2rem;
     
 }
 
@@ -52,4 +53,18 @@
     .FreelanceProfile {
         width:85%;
     }
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
