--- a/frontend/src/routes/Account/Account.css
+++ b/frontend/src/routes/Account/Account.css
@@ -1,9 +1,9 @@
 .Account {
     display: flex;
     flex-direction: column;
-    padding-top:5rem;
-    gap:5rem;
-    
+    padding-top: 5rem;
+    gap: 5rem;
+
 }
 
 .Account h1 {
@@ -41,12 +41,12 @@
     font-size: 1rem;
     color: rgb(55, 54, 54);
     line-height: 2rem;
-    width:65%;
+    width: 65%;
 }
 
 .accountHeader {
-    background-color: 	#ffdfba;
-    height:45vh;
+    background-color: #ffdfba;
+    height: 45vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -56,7 +56,7 @@
 .accountHeaderText {
     display: flex;
     flex-direction: column;
-    gap:1rem;
+    gap: 1rem;
     text-align: center;
     align-items: center;
 }
@@ -68,17 +68,17 @@
 
 .options {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     display: flex;
     background-color: #febf77;
     border-radius: 7px 7px 0 0;
-    width:60%;
-    margin:0 auto;
+    width: 60%;
+    margin: 0 auto;
 }
 
 .accountOption {
-    width:100%;
-    height:5rem;
+    width: 100%;
+    height: 5rem;
     border-radius: 7px 7px 0 0;
     cursor: pointer;
     color: white;
@@ -105,7 +105,6 @@
     box-shadow: -8px 0 6px -8px #333;
     transition: 0.1s;
 }
-
 @keyframes section {
     from {
         opacity: 0;
@@ -134,7 +133,7 @@
     }
 }
 .detailsDisplayed {
-    animation: 1s section ;
+    animation: 1s section;
 }
 .freelanceDisplayed {
     animation: 1s section2;
@@ -142,16 +141,18 @@
 .tutoringDisplayed {
     animation: 1s section3;
 }
-
 @media only screen and (max-width:800px) {
     .Account h4 {
         font-size: 1.8rem;
     }
     .Account h5 {
-        width:100%;
+        width: 100%;
     }
     .options {
-        width:95%;
+        width: 95%;
     }
-    
+
+    .accountHeaderText h5 {
+        display: none;    
+    }
 }
