--- a/frontend/src/components/FreelanceProfile/FreelanceProfile.css
+++ b/frontend/src/components/FreelanceProfile/FreelanceProfile.css
@@ -20,6 +20,7 @@
     border-radius: 12px;
     padding: 1.5rem;
     max-width:20rem;
+    min-width:16rem;
     display: flex;
     flex-direction: column;
     gap:1.1rem;
