--- a/frontend/src/routes/Landing/Landing.css
+++ b/frontend/src/routes/Landing/Landing.css
@@ -495,12 +495,10 @@ button:hover b {
 
 }
 
-.ticketsCarousel {
+.landingCarousel {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-
 }
 
 @media only screen and (max-width: 1400px) {
