--- a/frontend/src/routes/Landing/Landing.css
+++ b/frontend/src/routes/Landing/Landing.css
@@ -579,6 +579,11 @@ textarea {
         padding-bottom:5rem;
     }
 
+    .freelanceContainer {
+        width:100%;
+    }
+
+
 }
 
 @media only screen and (max-width:500px) {
