--- a/frontend/src/routes/Landing/Landing.css
+++ b/frontend/src/routes/Landing/Landing.css
@@ -460,7 +460,11 @@ button:hover b {
 }
 
 .freelanceCol {
-    height:25rem;
+    height:30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2rem;
 }
 
 .indexText {
