--- a/frontend/src/routes/Landing/Landing.css
+++ b/frontend/src/routes/Landing/Landing.css
@@ -583,6 +583,11 @@ textarea {
         padding-bottom:5rem;
     }
 
+    .indexText {
+        margin: 0 auto;
+        width:90%;
+    }
+
     .freelanceContainer {
         width:100%;
     }
